@@ -5,6 +5,10 @@ cod-tools (unreleased)
       - detecting and reporting forbidden vertical tabulation (VT) and
         form feed (FF) control characters;
       - optimized detection and reporting of control characters.
+    - COD::SUsage:
+      - updated the options() and usage() subroutines to properly
+        use the script name that is passed as an arugument instead
+        of relying on the value of the '$0' Perl variable.
 
 cod-tools (2.6)
 
